k8s/frontend-service.yml
kind: Service
apiVersion: v1
metadata:
  name: frontend-svc
  namespace: chat-app
spec:
  selector:
    app: frontend
  ports:
  - port: 80
    targetPort: 80
